# ciit_lesson_plan

./: LICENSE  README.md  __init__.py  ciit_lesson_plan.py  pyproject.toml
ciit_lesson_plan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example/: ja-1a.md  ja-2.md  template.docx  x1.txt  x2.txt
src/ciit_lesson_plan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lesson_plan/: __init__.py  plan_gui.py
