[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ciit-lesson-plan"
version = "0.1.4"
dependencies = [
    "python-docx"
]

authors = [
  {name = "Yongshun Song", email = "ys_song@foxmail.com"}
]
maintainers = [
  {name = "Yongshun Song", email = "ys_song@foxmail.com"}
]

description = "这是一个用于将Markdown格式的教学计划内容转换为Word文档（.docx）的Python脚本。该脚本使用python_docx库来处理Word文档，能够读取Markdown文件内容，并根据预定义的模板生成格式化的教案文档。"

readme = "README.md"

license = "MIT"
license-files = ["LICENSE"]
keywords = ["lesson", "plan", "ciit", "teaching", "docx"]

[project.scripts]
lesson_plan = "lesson_plan:convert_md_to_docx"
plan_gui = "lesson_plan:plan_gui"

